Fix map not showing and add div back

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -3,10 +3,10 @@
 }
 
 .app__wrapper{
-   display: flex;
+   //display: flex;
    //flex-flow: row nowrap;
    //align-items: center;
    height: 100vh;
-   width: 100vh;
-   //overflow: hidden;
+   // width: 100vh;
+   overflow: hidden;
 }
